--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
-<app-home></app-home>
+<app-navbar *ngIf="router != '/under-construction'"></app-navbar>
 
 <router-outlet></router-outlet>
